services/jenkins-docker-pipeline/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: jenkins-docker-pipeline
  labels:
    app: jenkins-docker-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-docker-pipeline
  template:
    metadata:
      labels:
        apps: jenkins-docker-pipeline
    spec:
      containers:
        - name: jenkins-docker-pipeline
          image: "gcr.io/imposing-pager-229110/jenkins-docker-pipeline:25"
