services/jenkins-docker-pipeline/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-docker-pipeline
spec:
  selector:
    app: jenkins-docker-pipeline
  ports:
    - name: http
      targetPort: 3000
      port: 3000
