services/jenkins-docker-pipeline/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-docker-pipeline-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: cust1.104.154.19.21.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-docker-pipeline
          servicePort: 3000
